--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
   */
   const maps = [
     {
-      title: "Cathédrale de Langres",
-      date: "2024",
-      thumb: "https://i.postimg.cc/Sxxmq4XS/LANGRES-cathedrale-5.jpg",
-      image: "https://i.postimg.cc/Sxxmq4XS/LANGRES-cathedrale-5.jpg",
-      description: "Carte verticale réalisée sous QGIS. Travail sur la composition, l'équilibre visuel et la hiérarchisation de l'information dans un format contraint.",
-      link: "https://i.postimg.cc/Sxxmq4XS/LANGRES-cathedrale-5.jpg"
+      title: "CARTE DE BORDEAUX",
+      date: "2023",
+      thumb: "maps/BORDEAUX.jpg",
+      image: "maps/BORDEAUX.jpg",
+      description: "Ces cartes ont été produite via les données de la BDTOPO de l'IGN. J'ai voulu faire un rendu plutôt joli en cercle avec un code qui n'affichait que les données de chaque couche à X mètres de distance au lieu de faire un vulgaire masque blanc..... Je trouve quand même le rendu très joli avec ces chemin de fer/tram en orange et les routes principales en bleu.",
+      link: "https://raw.githubusercontent.com/JulienH77/cartographie/refs/heads/main/maps/BORDEAUX.jpg"
     },
     {
-      title: "Cathédrale de Langres – Vue générale",
-      date: "2024",
-      thumb: "https://i.postimg.cc/90Bj5gCw/LANGRES-cathedrale-1.jpg",
-      image: "https://i.postimg.cc/90Bj5gCw/LANGRES-cathedrale-1.jpg",
-      description: "Carte horizontale mettant l'accent sur le contexte spatial et la lecture à moyenne échelle.",
-      link: "https://i.postimg.cc/90Bj5gCw/LANGRES-cathedrale-1.jpg"
+      title: "LA ZONE DE VISIBILITÉ DE LA TOUR EFFEIL",
+      date: "Avril 2025",
+      thumb: "maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png",
+      image: "maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png",
+      description: "Cette carte a été produite avec le MNS (Modèle Numérique de Surface) et le plugin Visibility Analysis. Il a fallu faire le contour du sujet (avec la couche des bâtiments de la BDTOPO) et en d'y faire un grille de points dessus avec un espacement à choisir, j'ai pris 3m je crois. Ensuite j'ai du lancer un autre calcul pour déterminer le rayon d'observation et l'altitude de visualisation (1,6m - hauteur d'une personne en moyenne). Puis lancer le calcul et faire l'habillage de la carte. Et oui, le phare de la tour Effeil est loupé.",
+      link: "https://raw.githubusercontent.com/JulienH77/cartographie/refs/heads/main/maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png"
     }
   ];
 
