--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
     * { box-sizing: border-box; }
 
+.thumb,
+.popup-body img {
+  background: #0e1428;
+  padding: 12px;
+}
+
+
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, sans-serif;
@@ -41,6 +48,8 @@
       color: var(--muted);
       line-height: 1.7;
     }
+
+
 
     /* Galerie */
     .gallery {
@@ -67,6 +76,7 @@
       border-radius: 14px;
       border: 1px solid var(--border);
       display: block;
+	  filter: brightness(0.92) contrast(0.95);
     }
 
     .item h3 {
@@ -88,15 +98,16 @@
       z-index: 10;
     }
 
-    .popup {
-      max-width: 1100px;
-      width: 100%;
-      background: linear-gradient(180deg, #05070f, #05070f);
-      border: 1px solid var(--border);
-      border-radius: 22px;
-      overflow: hidden;
-      animation: fadeUp .25s ease;
-    }
+.popup {
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.popup-body {
+  overflow-y: auto;
+}
+
 
     @keyframes fadeUp {
       from { opacity: 0; transform: translateY(12px); }
@@ -248,15 +259,23 @@
     gallery.appendChild(div);
   });
 
-  function openPopup(i) {
-    const m = maps[i];
-    pTitle.textContent = m.title;
-    pDate.textContent = m.date;
-    pImage.src = m.image;
-    pDescription.textContent = m.description;
-    pLink.href = m.link;
-    overlay.style.display = 'flex';
-  }
+function openPopup(i) {
+  const m = maps[i];
+  pTitle.textContent = m.title;
+  pDate.textContent = m.date;
+  pImage.src = m.image;
+  pDescription.textContent = m.description;
+  pLink.href = m.link;
+
+  overlay.style.display = 'flex';
+  document.body.classList.add('no-scroll');
+}
+
+function closePopup() {
+  overlay.style.display = 'none';
+  document.body.classList.remove('no-scroll');
+}
+
 
   function closePopup() {
     overlay.style.display = 'none';
