--- a/30daysmapchallenge.html
+++ b/30daysmapchallenge.html
@@ -182,35 +182,35 @@
         const themes = {
             2025: [
                 { title: "Points", thumbnail: "https://i.postimg.cc/XJSMZ6vy/CONDES-pot-de-fleur.jpg" },
-                { title: "Lignes", thumbnail: "https://via.placeholder.com/300x200?text=Lignes" },
-                { title: "Polygones", thumbnail: "https://via.placeholder.com/300x200?text=Polygones" },
-                { title: "Hexagones", thumbnail: "https://via.placeholder.com/300x200?text=Hexagones" },
-                { title: "Raster", thumbnail: "https://via.placeholder.com/300x200?text=Raster" },
-                { title: "Réseau", thumbnail: "https://via.placeholder.com/300x200?text=Réseau" },
-                { title: "Mouvement", thumbnail: "https://via.placeholder.com/300x200?text=Mouvement" },
-                { title: "3D", thumbnail: "https://via.placeholder.com/300x200?text=3D" },
-                { title: "Noir et blanc", thumbnail: "https://via.placeholder.com/300x200?text=Noir+et+blanc" },
-                { title: "Couleurs", thumbnail: "https://via.placeholder.com/300x200?text=Couleurs" },
-                { title: "Cartogramme", thumbnail: "https://via.placeholder.com/300x200?text=Cartogramme" },
-                { title: "Chaleur", thumbnail: "https://via.placeholder.com/300x200?text=Chaleur" },
-                { title: "Topographie", thumbnail: "https://via.placeholder.com/300x200?text=Topographie" },
-                { title: "OpenStreetMap", thumbnail: "https://via.placeholder.com/300x200?text=OpenStreetMap" },
-                { title: "Satellite", thumbnail: "https://via.placeholder.com/300x200?text=Satellite" },
-                { title: "Historique", thumbnail: "https://via.placeholder.com/300x200?text=Historique" },
-                { title: "Futur", thumbnail: "https://via.placeholder.com/300x200?text=Futur" },
-                { title: "Nourriture", thumbnail: "https://via.placeholder.com/300x200?text=Nourriture" },
-                { title: "Eau", thumbnail: "https://via.placeholder.com/300x200?text=Eau" },
-                { title: "Art", thumbnail: "https://via.placeholder.com/300x200?text=Art" },
-                { title: "Musique", thumbnail: "https://via.placeholder.com/300x200?text=Musique" },
-                { title: "Globe", thumbnail: "https://via.placeholder.com/300x200?text=Globe" },
-                { title: "Minimaliste", thumbnail: "https://via.placeholder.com/300x200?text=Minimaliste" },
-                { title: "Densité", thumbnail: "https://via.placeholder.com/300x200?text=Densité" },
-                { title: "Accessibilité", thumbnail: "https://via.placeholder.com/300x200?text=Accessibilité" },
-                { title: "Météo", thumbnail: "https://via.placeholder.com/300x200?text=Météo" },
-                { title: "Végétation", thumbnail: "https://via.placeholder.com/300x200?text=Végétation" },
-                { title: "Transport", thumbnail: "https://via.placeholder.com/300x200?text=Transport" },
-                { title: "Économie", thumbnail: "https://via.placeholder.com/300x200?text=Économie" },
-                { title: "Libre", thumbnail: "https://via.placeholder.com/300x200?text=Libre" }
+                { title: "Lines", thumbnail: "https://via.placeholder.com/300x200?text=Lignes" },
+                { title: "Polygons", thumbnail: "https://via.placeholder.com/300x200?text=Polygones" },
+                { title: "Data: my data", thumbnail: "https://via.placeholder.com/300x200?text=Hexagones" },
+                { title: "Earth", thumbnail: "https://via.placeholder.com/300x200?text=Raster" },
+                { title: "Dimensions", thumbnail: "https://via.placeholder.com/300x200?text=Réseau" },
+                { title: "Accessibility", thumbnail: "maps/30daysmapchallenge/2025/7-carte_en_braille.jpeg" },
+                { title: "Urban", thumbnail: "https://via.placeholder.com/300x200?text=3D" },
+                { title: "Analog", thumbnail: "https://via.placeholder.com/300x200?text=Noir+et+blanc" },
+                { title: "Air", thumbnail: "https://via.placeholder.com/300x200?text=Couleurs" },
+                { title: "Minimal map", thumbnail: "maps/30daysmapchallenge/2025/11-carte_minimaliste.jpeg" },
+                { title: "Map from 2125", thumbnail: "https://via.placeholder.com/300x200?text=Chaleur" },
+                { title: "10 minute map", thumbnail: "https://via.placeholder.com/300x200?text=Topographie" },
+                { title: "Data : OSM", thumbnail: "https://via.placeholder.com/300x200?text=OpenStreetMap" },
+                { title: "Fire", thumbnail: "https://via.placeholder.com/300x200?text=Satellite" },
+                { title: "Cell", thumbnail: "https://via.placeholder.com/300x200?text=Historique" },
+                { title: "A new tool", thumbnail: "https://via.placeholder.com/300x200?text=Futur" },
+                { title: "Out of this world", thumbnail: "https://via.placeholder.com/300x200?text=Nourriture" },
+                { title: "Projections", thumbnail: "https://via.placeholder.com/300x200?text=Eau" },
+                { title: "Water", thumbnail: "https://via.placeholder.com/300x200?text=Art" },
+                { title: "Icons", thumbnail: "https://via.placeholder.com/300x200?text=Musique" },
+                { title: "Data challenge : Natural Earth", thumbnail: "https://via.placeholder.com/300x200?text=Globe" },
+                { title: "Process", thumbnail: "https://via.placeholder.com/300x200?text=Minimaliste" },
+                { title: "Places and their names", thumbnail: "https://via.placeholder.com/300x200?text=Densité" },
+                { title: "Hexagons", thumbnail: "https://via.placeholder.com/300x200?text=Accessibilité" },
+                { title: "Transports", thumbnail: "https://via.placeholder.com/300x200?text=Météo" },
+                { title: "Boundaries", thumbnail: "https://via.placeholder.com/300x200?text=Végétation" },
+                { title: "Black", thumbnail: "https://via.placeholder.com/300x200?text=Transport" },
+                { title: "Raster", thumbnail: "https://via.placeholder.com/300x200?text=Économie" },
+                { title: "Makeover", thumbnail: "https://via.placeholder.com/300x200?text=Libre" }
             ],
             2024: [
                 { title: "Points", thumbnail: "https://via.placeholder.com/300x200?text=Points" },
