--- a/30daysmapchallenge.html
+++ b/30daysmapchallenge.html
@@ -210,7 +210,7 @@
                 { title: "Transports", thumbnail: "https://via.placeholder.com/300x200?text=Météo" },
                 { title: "Boundaries", thumbnail: "https://via.placeholder.com/300x200?text=Végétation" },
                 { title: "Black", thumbnail: "https://via.placeholder.com/300x200?text=Transport" },
-                { title: "Raster", thumbnail: "https://via.placeholder.com/300x200?text=Économie" },
+                { title: "Raster", thumbnail: "maps/30daysmapchallenge/2025/29-raster.jpeg" },
                 { title: "Makeover", thumbnail: "https://via.placeholder.com/300x200?text=Libre" }
             ],
             2024: [
