--- a/30daysmapchallenge.html
+++ b/30daysmapchallenge.html
@@ -182,7 +182,7 @@
         // Données des thèmes et des miniatures (exemple)
         const themes = {
             2025: [
-                { title: "Points", thumbnail: "https://i.postimg.cc/XJSMZ6vy/CONDES-pot-de-fleur.jpg" },
+                { title: "Points", thumbnail: "maps/30daysmapchallenge/2025/1-points.jpeg" },
                 { title: "Lines", thumbnail: "https://via.placeholder.com/300x200?text=Lignes" },
                 { title: "Polygons", thumbnail: "https://via.placeholder.com/300x200?text=Polygones" },
                 { title: "Data: my data", thumbnail: "https://via.placeholder.com/300x200?text=Hexagones" },
