--- a/index.html
+++ b/index.html
@@ -1,285 +1,266 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Cartographies – Julien</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>Productions cartographiques — QGIS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    :root {
-      --bg: #05070f;
-      --panel: #0b1020;
-      --border: rgba(255,255,255,0.08);
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --accent: #38bdf8;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    * { box-sizing: border-box; }
-
-.thumb,
-.popup-body img {
-  background: #0e1428;
-  padding: 12px;
+<style>
+:root{
+  --bg:#f6f7f9;
+  --card:#ffffff;
+  --text:#1f2937;
+  --muted:#6b7280;
+  --accent:#2563eb;
+  --border:#e5e7eb;
 }
 
+*{box-sizing:border-box}
 
-    body {
-      margin: 0;
-      font-family: Inter, system-ui, -apple-system, sans-serif;
-      background: radial-gradient(circle at top, #0b1020, #05070f 70%);
-      color: var(--text);
-    }
-
-    header {
-      max-width: 1200px;
-      margin: auto;
-      padding: 4.5rem 2rem 3rem;
-    }
-
-    header h1 {
-      margin: 0 0 1rem;
-      font-size: 2.4rem;
-      font-weight: 700;
-    }
-
-    header p {
-      max-width: 700px;
-      color: var(--muted);
-      line-height: 1.7;
-    }
-
-
-
-    /* Galerie */
-    .gallery {
-      max-width: 1200px;
-      margin: auto;
-      padding: 0 2rem 4rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-      gap: 2.2rem;
-    }
-
-    .item {
-      cursor: pointer;
-      transition: transform .25s ease;
-    }
-
-    .item:hover {
-      transform: translateY(-6px);
-    }
-
-    .thumb {
-      width: 100%;
-      height: auto; /* ratio naturel */
-      border-radius: 14px;
-      border: 1px solid var(--border);
-      display: block;
-	  filter: brightness(0.92) contrast(0.95);
-    }
-
-    .item h3 {
-      margin: .7rem 0 0;
-      font-size: 1.05rem;
-      font-weight: 600;
-    }
-
-    /* Popup */
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(5,7,15,.9);
-      backdrop-filter: blur(12px);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-      z-index: 10;
-    }
-
-.popup {
-  max-height: 90vh;
-  display: flex;
-  flex-direction: column;
+body{
+  margin:0;
+  font-family:Inter,sans-serif;
+  background:var(--bg);
+  color:var(--text);
+  line-height:1.75;
 }
 
-.popup-body {
-  overflow-y: auto;
+header{
+  text-align:center;
+  padding:4rem 1.5rem 3rem;
 }
 
+header h1{
+  font-size:2.6rem;
+  font-weight:700;
+  margin-bottom:0.5rem;
+}
 
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(12px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+header p{
+  max-width:850px;
+  margin:auto;
+  color:var(--muted);
+}
 
-    .popup-header {
-      padding: 1.6rem 2rem 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: start;
-      gap: 1rem;
-    }
+main{
+  max-width:950px;
+  margin:auto;
+  padding:0 1.5rem 4rem;
+  display:flex;
+  flex-direction:column;
+  gap:3.5rem;
+}
 
-    .popup-header h2 {
-      margin: 0;
-      font-size: 1.5rem;
-    }
+section{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:16px;
+  padding:2.5rem;
+  box-shadow:0 15px 30px rgba(0,0,0,0.05);
+}
 
-    .popup-header span {
-      color: var(--muted);
-    }
+section h2{
+  margin-top:0;
+  font-size:1.6rem;
+}
 
-    .close {
-      font-size: 2.6rem;
-      cursor: pointer;
-      color: var(--muted);
-      line-height: 1;
-    }
+section h2 a{
+  color:var(--text);
+  text-decoration:underline;
+  text-decoration-color:var(--accent);
+  text-underline-offset:5px;
+}
 
-    .close:hover { color: white; }
+section p{
+  color:var(--muted);
+  margin-bottom:1rem;
+}
 
-    .popup-body {
-      padding: 0 2rem 2.2rem;
-    }
+.gallery img{
+  width:100%;
+  margin-top:1.5rem;
+  border-radius:12px;
+  cursor:pointer;
+  transition:transform .2s ease, box-shadow .2s ease;
+}
 
-    .popup-body img {
-      width: 100%;
-      height: auto;
-      max-height: 70vh; /* limite pour cartes verticales */
-      object-fit: contain;
-      border-radius: 14px;
-      margin: 1.2rem 0 1.4rem;
-      border: 1px solid var(--border);
-    }
+.gallery img:hover{
+  transform:scale(1.01);
+  box-shadow:0 10px 30px rgba(0,0,0,.15);
+}
 
-    .popup-body p {
-      max-width: 900px;
-      line-height: 1.75;
-      color: var(--muted);
-      margin-top: 0;
-    }
+.version{
+  margin-top:1.5rem;
+  font-weight:600;
+}
 
-    .open-btn {
-      padding: .6rem 1.3rem;
-      border-radius: 999px;
-      font-size: .85rem;
-      background: rgba(56,189,248,.15);
-      color: var(--accent);
-      text-decoration: none;
-      border: 1px solid rgba(56,189,248,.35);
-      transition: background .2s ease;
-    }
+code{
+  display:block;
+  background:#111827;
+  color:#e5e7eb;
+  padding:1rem;
+  border-radius:10px;
+  overflow-x:auto;
+  font-size:.85rem;
+  margin:1.2rem 0;
+}
 
-    .open-btn:hover {
-      background: rgba(56,189,248,.25);
-    }
+/* LIGHTBOX */
+#lightbox{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.85);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:1000;
+}
 
-    footer {
-      text-align: center;
-      padding: 3rem 1rem 2rem;
-      font-size: .8rem;
-      color: var(--muted);
-    }
-  </style>
+#lightbox img{
+  max-width:90%;
+  max-height:90%;
+  border-radius:12px;
+}
+
+footer{
+  text-align:center;
+  padding:2rem;
+  font-size:.85rem;
+  color:var(--muted);
+}
+</style>
 </head>
+
 <body>
 
 <header>
-  <h1>Cartographies</h1>
-  <p>Travaux cartographiques réalisés sous QGIS : composition, analyse spatiale et choix graphiques orientés lisibilité.</p>
+<h1>Productions cartographiques — QGIS</h1>
+<p>
+Toutes les cartes présentées ci-dessous ont été réalisées sous QGIS (3.34), uniquement par curiosité
+et par envie d’expérimenter.  
+Aucune retouche n’a été effectuée sur un logiciel externe.  
+<br><br>
+Pour consulter les cartes en bonne qualité, il suffit de cliquer dessus.
+</p>
 </header>
 
-<section class="gallery" id="gallery"></section>
+<main>
 
-<div class="overlay" id="overlay">
-  <div class="popup">
-    <div class="popup-header">
-      <div>
-        <h2 id="p-title"></h2>
-        <span id="p-date"></span>
-      </div>
-      <span class="close" onclick="closePopup()">×</span>
-    </div>
-    <div class="popup-body">
-      <p id="p-description"></p>
-      <img id="p-image" src="" alt="">
-      <div class="popup-actions">
-        <a id="p-link" class="open-btn" target="_blank">Ouvrir la carte en grand</a>
-      </div>
-    </div>
-  </div>
+<section>
+<h2><a href="#">La zone de visibilité de la tour Eiffel</a></h2>
+<p>
+Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
+<em>Visibility Analysis</em>.
+</p>
+<p>
+J’ai d’abord délimité le contour du sujet à l’aide de la couche des bâtiments de la BDTOPO,
+puis généré une grille de points avec un espacement d’environ 3 mètres.
+Un second calcul m’a permis de définir le rayon d’observation et l’altitude de visualisation
+(1,60 m, correspondant à la hauteur moyenne d’une personne).
+Une fois les calculs terminés, je me suis concentré sur l’habillage de la carte.
+Et oui… le phare de la tour Eiffel est malheureusement loupé.
+</p>
+<div class="gallery">
+<img src="maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png" alt="Zone de visibilité tour Eiffel">
+</div>
+</section>
+
+<section>
+<h2><a href="#">La France et ses régions en origami</a></h2>
+<p>
+Cette carte a été réalisée exclusivement avec les outils natifs de QGIS.
+</p>
+<p>
+À partir des régions en format GeoJSON, je les ai d’abord simplifiées, puis séparées en
+12 couches distinctes. J’ai supprimé les trous et les îles dans les géométries avant
+d’extraire les sommets de chaque région.
+J’ai ensuite appliqué une triangulation de Delaunay, région par région.
+Certains triangles ont dû être supprimés manuellement car ils ne respectaient pas la
+forme réelle des régions. Le travail s’est terminé par la symbologie.
+</p>
+<div class="gallery">
+<img src="maps/FRANCE_origami.png" alt="France origami">
+</div>
+</section>
+
+<section>
+<h2><a href="#">Les bancs de Chaumont</a></h2>
+<p>
+Cette carte a été produite avec les outils de base de QGIS et un habillage issu des données
+de la BDTOPO.
+</p>
+<p>
+Le plus long a été la collecte de l’information : de nombreuses heures passées sur Google
+Street View à repérer les bancs rue par rue, complétées par des relevés sur le terrain
+dans les zones non couvertes.  
+Les deux versions présentées ne sont pas totalement à jour… et honnêtement, je n’ai
+pas eu le courage de refaire toutes les rues.
+</p>
+
+<div class="version">Version 1</div>
+<div class="gallery">
+<img src="img/bancs_v1.jpg" alt="Bancs Chaumont v1">
 </div>
 
+<div class="version">Version 2</div>
+<div class="gallery">
+<img src="img/bancs_v2.jpg" alt="Bancs Chaumont v2">
+</div>
+</section>
+
+<section>
+<h2><a href="#">Le trajet de mon vol vers la Chine</a></h2>
+<p>
+Cette carte a été réalisée avec les outils de base de QGIS et deux plugins.
+</p>
+<p>
+J’ai utilisé le plugin <em>Globe Builder</em> afin de produire une projection en globe.
+Les trajectoires ont été relevées sur Flightradar24, puis retracées manuellement dans QGIS
+sous forme de segments horaires, avec pour chacun une heure de départ et une heure d’arrivée.
+</p>
+<p>
+Pour attribuer des horaires précis aux points générés le long de la trajectoire,
+j’ai créé deux champs calculés :
+</p>
+
+<code>
+TIMSTAMP_S : epoch("start_date") + ( "distance" / maximum("distance") ) * (epoch("end_date") - epoch("start_date"))
+TIMSTAMP_T : format_date(datetime_from_epoch("timstamp_s"), 'yyyy-MM-dd HH:mm:ss')
+</code>
+
+<p>
+L’animation temporelle a ensuite été réalisée avec le plugin TimeManager,
+puis les images ont été assemblées pour produire le GIF final.
+</p>
+
+<div class="gallery">
+<img src="img/vol_chine.gif" alt="Vol vers la Chine">
+</div>
+</section>
+
+<!-- Le reste suit exactement le même principe -->
+<!-- Tu peux dupliquer les sections, le style est prêt -->
+
+</main>
+
 <footer>
-  © Julien — Portfolio cartographique
+© 2026 — Portfolio cartographique QGIS
 </footer>
 
+<div id="lightbox" onclick="this.style.display='none'">
+  <img src="" alt="">
+</div>
+
 <script>
-  /*
-    👉 AJOUTER UNE CARTE = AJOUTER UN OBJET ICI
-  */
-  const maps = [
-    {
-      title: "CARTE DE BORDEAUX",
-      date: "2023",
-      thumb: "maps/BORDEAUX.jpg",
-      image: "maps/BORDEAUX.jpg",
-      description: "Ces cartes ont été produite via les données de la BDTOPO de l'IGN. J'ai voulu faire un rendu plutôt joli en cercle avec un code qui n'affichait que les données de chaque couche à X mètres de distance au lieu de faire un vulgaire masque blanc..... Je trouve quand même le rendu très joli avec ces chemin de fer/tram en orange et les routes principales en bleu.",
-      link: "https://raw.githubusercontent.com/JulienH77/cartographie/refs/heads/main/maps/BORDEAUX.jpg"
-    },
-    {
-      title: "LA ZONE DE VISIBILITÉ DE LA TOUR EFFEIL",
-      date: "Avril 2025",
-      thumb: "maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png",
-      image: "maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png",
-      description: "Cette carte a été produite avec le MNS (Modèle Numérique de Surface) et le plugin Visibility Analysis. Il a fallu faire le contour du sujet (avec la couche des bâtiments de la BDTOPO) et en d'y faire un grille de points dessus avec un espacement à choisir, j'ai pris 3m je crois. Ensuite j'ai du lancer un autre calcul pour déterminer le rayon d'observation et l'altitude de visualisation (1,6m - hauteur d'une personne en moyenne). Puis lancer le calcul et faire l'habillage de la carte. Et oui, le phare de la tour Effeil est loupé.",
-      link: "https://raw.githubusercontent.com/JulienH77/cartographie/refs/heads/main/maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png"
-    }
-  ];
-
-  const gallery = document.getElementById('gallery');
-  const overlay = document.getElementById('overlay');
-
-  const pTitle = document.getElementById('p-title');
-  const pDate = document.getElementById('p-date');
-  const pImage = document.getElementById('p-image');
-  const pDescription = document.getElementById('p-description');
-  const pLink = document.getElementById('p-link');
-
-  maps.forEach((m, i) => {
-    const div = document.createElement('div');
-    div.className = 'item';
-    div.innerHTML = `
-      <img class="thumb" src="${m.thumb}" alt="">
-      <h3>${m.title}</h3>
-    `;
-    div.onclick = () => openPopup(i);
-    gallery.appendChild(div);
+document.querySelectorAll('.gallery img').forEach(img=>{
+  img.addEventListener('click',()=>{
+    const lb=document.getElementById('lightbox');
+    lb.style.display='flex';
+    lb.querySelector('img').src=img.src;
   });
-
-function openPopup(i) {
-  const m = maps[i];
-  pTitle.textContent = m.title;
-  pDate.textContent = m.date;
-  pImage.src = m.image;
-  pDescription.textContent = m.description;
-  pLink.href = m.link;
-
-  overlay.style.display = 'flex';
-  document.body.classList.add('no-scroll');
-}
-
-function closePopup() {
-  overlay.style.display = 'none';
-  document.body.classList.remove('no-scroll');
-}
-
-
-  function closePopup() {
-    overlay.style.display = 'none';
-  }
+});
 </script>
 
 </body>
