--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@ main{
 	<header class="site-header">
 	    <nav class="nav">
 	        <div class="nav-left">
-	            <span class="site-title">Cartes QGIS</span>
+	            <span class="site-title">Accueil</span>
 	        </div>
 	        <ul class="nav-links">
-	            <li><a href="index.html">Accueil</a></li>
-	            <li><a href="qgismaps.html" class="active">Cartes QGIS</a></li>
+	            <li><a href="index.html" class="active">Accueil</a></li>
+	            <li><a href="qgismaps.html">Cartes QGIS</a></li>
 	            <li><a href="wonderdraftmaps.html">Carte Wonderdraft</a></li>
 				<li><a href="30daymapchallenge.html">30 Day Map Challenge</a></li>
 	        </ul>
