--- a/30daymapchallenge.html
+++ b/30daymapchallenge.html
@@ -19,22 +19,48 @@
             line-height: 1.6;
         }
 
-        .header {
-            background: linear-gradient(135deg, #2c3e50, #34495e);
+        /* NAV */
+        .site-header {
+            background: #111;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        .nav {
+            max-width: 1200px;
+            margin: auto;
+            padding: 15px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .nav-left {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .site-title {
+            font-weight: 600;
             color: white;
-            text-align: center;
-            padding: 2rem 0;
-            margin-bottom: 1.5rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .nav-links {
+            display: flex;
+            list-style: none;
+            gap: 20px;
+        }
+        .nav-links a {
+            color: #bbb;
+            text-decoration: none;
+            font-size: 0.95em;
+        }
+        .nav-links a:hover,
+        .nav-links a.active {
+            color: white;
+            border-bottom: 2px solid white;
         }
 
-        .header h1 {
-            font-size: 2.2rem;
-            font-weight: 300;
-            letter-spacing: 1px;
-        }
-
-        .nav-bar {
+        .year-bar {
             display: flex;
             justify-content: center;
             gap: 0;
@@ -45,9 +71,10 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: fit-content;
             margin: 0 auto 2rem;
+			margin-top: 20px;
         }
 
-        .nav-bar button {
+        .year-bar button {
             background: none;
             border: none;
             padding: 10px 20px;
@@ -59,12 +86,12 @@
             transition: all 0.3s ease;
         }
 
-        .nav-bar button:hover {
+        .year-bar button:hover {
             color: #2c3e50;
             background-color: #f0f0f0;
         }
 
-        .nav-bar button.active {
+        .year-bar button.active {
             color: white;
             background: linear-gradient(135deg, #f39c12, #e67e22);
         }
@@ -156,13 +183,33 @@
             font-size: 2rem;
             cursor: pointer;
         }
+		
+        /* FOOTER */
+        .site-footer {
+            text-align: center;
+            padding: 20px;
+            font-size: 0.8em;
+            color: #777;
+        }		
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>30DayMapChallenge</h1>
-    </div>
-    <div class="nav-bar">
+	<header class="site-header">
+	    <nav class="nav">
+	        <div class="nav-left">
+	            <span class="site-title">30 Day Map Challenge</span>
+	        </div>
+	        <ul class="nav-links">
+	            <li><a href="index.html">Accueil</a></li>
+	            <li><a href="qgismaps.html">Cartes QGIS</a></li>
+	            <li><a href="wonderdraftmaps.html">Carte Wonderdraft</a></li>
+				<li><a href="30daymapchallenge.html" class="active">30 Day Map Challenge</a></li>
+	        </ul>
+	    </nav>
+	</header>
+
+	<main>
+    <div class="year-bar">
         <button class="active" data-year="2025">2025</button>
         <button data-year="2024">2024</button>
         <button data-year="2023">2023</button>
@@ -177,6 +224,10 @@
             <img id="modal-image" src="" alt="Carte en grand">
         </div>
     </div>
+	</main>
+	<footer class="site-footer">
+	    Réalisé par moi-même – pour mon propre plaisir
+	</footer>
 
     <script>
         // Données des thèmes et des miniatures (exemple)
@@ -329,9 +380,9 @@ mapItem.innerHTML = `
         });
 
         // Changer d'année
-        document.querySelectorAll('.nav-bar button').forEach(button => {
+        document.querySelectorAll('.year-bar button').forEach(button => {
             button.addEventListener('click', () => {
-                document.querySelectorAll('.nav-bar button').forEach(b => b.classList.remove('active'));
+                document.querySelectorAll('.year-bar button').forEach(b => b.classList.remove('active'));
                 button.classList.add('active');
                 const year = button.getAttribute('data-year');
                 generateMapItems(year);
