--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -215,7 +215,7 @@ Cette carte a été produite sur Wonderdraft.
 Je voulais essayé de faire une île avec en découvrant le logiciel.
 </p>
 <div class="gallery">
-<img src="maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png" alt="Zone de visibilité tour Eiffel">
+<img src="maps/wonderdraft/premiere_carte.png" alt="Ma première carte">
 </div>
 </section>
 
@@ -228,7 +228,7 @@ Cette carte a été produite sur Wonderdraft.
 Je voulais faire une carte de mon département avec un style ancien (ça rend BEAUCOUP mieux en papier).
 </p>
 <div class="gallery">
-<img src="maps/FRANCE_origami.png" alt="France origami">
+<img src="maps/wonderdraft/Old_style_Haute-Marne.png" alt="Haute-Marne avec un style ancien">
 </div>
 </section>
 
