--- a/qgismaps.html
+++ b/qgismaps.html
@@ -207,6 +207,21 @@ code{
 
 
 <section>
+<h2><a href="#">La zone de visibilité de Notre-Dame de Paris</a></h2>
+<p>
+Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
+<em>Visibility Analysis</em>.
+</p>
+<p>
+Cette carte est un test. Je voulais essayé le plugin mais mon ordinateur avait du mal a suivre si la zone d'étude était trop éloignée. Je me suis donc contenté de 500 mètres.
+</p>
+<div class="gallery">
+<img src="maps/QGIS/PARIS_Notre_dame_de_Paris_500m.png" alt="Zone de visibilité de Notre-Dame de Paris sur 500m">
+</div>
+</section>
+
+
+<section>
 <h2><a href="#">La zone de visibilité de la tour Eiffel</a></h2>
 <p>
 Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
@@ -221,15 +236,14 @@ Une fois les calculs terminés, je me suis concentré sur l’habillage de la ca
 Et oui… le phare de la tour Eiffel est malheureusement loupé.
 </p>
 <div class="gallery">
-<img src="maps/VISIBILITY_ANALYSIS_Tour_effeil_3000m.png" alt="Zone de visibilité tour Eiffel">
+<img src="maps/QGIS/PARIS_Tour_Effeil_3000m.png" alt="Zone de visibilité tour Eiffel sur 3km">
 </div>
 </section>
 
+
 <section>
 <h2><a href="#">La France et ses régions en origami</a></h2>
-<p>
-Cette carte a été réalisée exclusivement avec les outils natifs de QGIS.
-</p>
+<p>Cette carte a été réalisée exclusivement avec les outils natifs de QGIS.</p>
 <p>
 À partir des régions en format GeoJSON, je les ai d’abord simplifiées, puis séparées en
 12 couches distinctes. J’ai supprimé les trous et les îles dans les géométries avant
@@ -239,16 +253,14 @@ Certains triangles ont dû être supprimés manuellement car ils ne respectaient
 forme réelle des régions. Le travail s’est terminé par la symbologie.
 </p>
 <div class="gallery">
-<img src="maps/FRANCE_origami.png" alt="France origami">
+<img src="maps/QGIS/FRANCE_origami.png" alt="France origami">
 </div>
 </section>
 
+
 <section>
 <h2><a href="#">Les bancs de Chaumont</a></h2>
-<p>
-Cette carte a été produite avec les outils de base de QGIS et un habillage issu des données
-de la BDTOPO.
-</p>
+<p>Cette carte a été produite avec les outils de base de QGIS et un habillage issu des données de la BDTOPO.</p>
 <p>
 Le plus long a été la collecte de l’information : de nombreuses heures passées sur Google
 Street View à repérer les bancs rue par rue, complétées par des relevés sur le terrain
@@ -259,42 +271,206 @@ pas eu le courage de refaire toutes les rues.
 
 <div class="version">Version 1</div>
 <div class="gallery">
-<img src="img/bancs_v1.jpg" alt="Bancs Chaumont v1">
+<img src="maps/QGIS/CHAUMONT_bancs_V1.png" alt="Bancs Chaumont v1">
 </div>
 
 <div class="version">Version 2</div>
 <div class="gallery">
-<img src="img/bancs_v2.jpg" alt="Bancs Chaumont v2">
+<img src="maps/QGIS/CHAUMONT_bancs_V2.png" alt="Bancs Chaumont v2">
 </div>
 </section>
 
+
 <section>
 <h2><a href="#">Le trajet de mon vol vers la Chine</a></h2>
-<p>
-Cette carte a été réalisée avec les outils de base de QGIS et deux plugins.
-</p>
+<p>Cette carte a été réalisée avec les outils de base de QGIS et deux plugins.</p>
 <p>
 J’ai utilisé le plugin <em>Globe Builder</em> afin de produire une projection en globe.
 Les trajectoires ont été relevées sur Flightradar24, puis retracées manuellement dans QGIS
 sous forme de segments horaires, avec pour chacun une heure de départ et une heure d’arrivée.
 </p>
 <p>
-Pour attribuer des horaires précis aux points générés le long de la trajectoire,
-j’ai créé deux champs calculés :
+J'ai ensuite utilisé la fonction pour ajouter des points le long d'un ligne tous les X mètres mais je ne sais plus combien j'ai pu mettre.<br><br> 
+Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des champs calculés :<br>
+<span style="font-size: 0.8em;">Je commence par créer le champ timstamp_s (en décimal) et ensuite je crée le champ timstamp_t (en texte)</span>
 </p>
 
-<code>
-TIMSTAMP_S : epoch("start_date") + ( "distance" / maximum("distance") ) * (epoch("end_date") - epoch("start_date"))
-TIMSTAMP_T : format_date(datetime_from_epoch("timstamp_s"), 'yyyy-MM-dd HH:mm:ss')
+<code style="font-size: 0.9em">
+<ul>
+<li>TIMSTAMP_S : epoch("start_date") + ( "distance" / maximum("distance") ) * (epoch("end_date") - epoch("start_date"))</li>
+<li>TIMSTAMP_T : format_date(datetime_from_epoch("timstamp_s"), 'yyyy-MM-dd HH:mm:ss')</li>
+</ul>
 </code>
 
-<p>
-L’animation temporelle a ensuite été réalisée avec le plugin TimeManager,
-puis les images ont été assemblées pour produire le GIF final.
-</p>
+<p>J'ai ensuite lancé le plugin TimeManager et fait défiler l'animation temporelle. Je n'ai plus eu qu'a fusionner les images capturées par le plugin pour faire ce GIF.</p>
 
 <div class="gallery">
-<img src="img/vol_chine.gif" alt="Vol vers la Chine">
+<img src="img/vol_chine.gif" alt="Vol vers la Chine animé (58Mo LMAO)">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">MON TRAJET POUR MON VOYAGE EN CHINE</a></h2>
+<p>Cette carte a été produite avec les outils de base de QGIS.</p>
+<p>Rien de plus facile, j'ai du chercher le fond de carte adapté et j'ai placé à la main les points et lignes. Plus qu'à faire l'habillage de la carte.</p>
+<div class="gallery">
+<img src="maps/QGIS/FRANCE_origami.png" alt="Mon voyage en Chine">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">LES ROUTES EN DIRECTION DE CHAUMONT</a></h2>
+<p>Cette carte a été produite avec les outils de base de QGIS.</p>
+<p>Je me suis encore une fois "baladé" sur Google StreetView à la recherche des panneaux de directions (hors autoroute) indiquant Chaumont le plus loin. Le visuel de la carte n'est vraiment pas bon mais je me suis dépêché sur la fin car je commençais à en avoir marre.</p>
+<div class="gallery">
+<img src="maps/QGIS/FRANCE_panneaux_direction_Chaumont.jpeg" alt="Signalisation de Chaumont en France">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">DATE DE CRÉATION DES BÂTIMENTS ENCORE EXISTANT A CHAUMONT</a></h2>
+<p>Cette carte a été produite via les données de la BDTOPO et deux plugins, TimeManager et OpenTopography DEM Downloader.</p>
+<p>J'ai ajouté dans QGIS les données de OpenTopography DEM Downloader pour le dénivelé du terrain et j'y ai ajouté les données de la BDTOPO.</p>
+<p>Ensuite j'ai affiché en gris les bâtiments encore debout n'ayant pas de date de création dans les données et en rouge ceux en contenant une. J'ai mis le plugin TimeManager en marche avec le champ des données des bâtiments et j'ai lancé l'enregistrement que j'ai transformé en GIF. Les dates du GIF vont de 1450 à 2020 mais dans les données elles varient de 1300 à 2018.</p>
+<div class="gallery">
+<img src="maps/QGIS/CHAUMONT_date_batiments.gif" alt="Date des bâtiments de chaumont animé">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">VISUALISATION 3D DE LA HAUTE-MARNE</a></h2>
+<p>Cette carte a été produite via les données du MNT de l'IGN.</p>
+<p>J'ai segmenté tous les 50m (je crois) le raster pour ensuite les vectoriser et y ajouter les couleurs. J'ai placé par dessus le relief en semi transparent et je trouve ce rendu juste magnifique.</p>
+
+<div class="gallery">
+<img src="maps/QGIS/HAUTE-MARNE_topographie.jpg" alt="Altitude de la Haute-Marne">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">TEST DE CARTE DE DÉPLACEMENT</a></h2>
+<p>Cette carte a été produite avec ma mémoire, GoogleMaps et Flightradar24.</p>
+<p>J'ai retracé à la main les trajets sur les routes pour visualiser où nous sommes passé. Pour ce qui est des horaires, J'ai juste mis l'heure de départ et l'heure d'arrivée. Ensuite j'ai utilisé la fonction native de QGIS pour tracer des points tous les X km sur les lignes et j'y ai mis l'image du type de transport dessus et j'ai ajouté deux champs calculé. Ce sont les mêmes que pour cette carte ci : Mon voyage vers la chine.</p>
+<p>J'ai par la suite fait un atlas pour imprimer chaque image que j'ai fusionné pour faire ce fichier mp4 avec Shutter encoder.</p>
+<p>Voici une vidéo test à refaire car pas mal de problème d'images dans la vidéo au mauvais endroit.</p>
+<div class="gallery">
+<img src="maps/FRANCE_origami.png" alt="Vidéo test de mes transports en été 2025 YOUTUBE">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">CARTE DE LA ROUTE DE LA SOIE</a></h2>
+<p>
+Cette carte a été produite avec wikipédia et quelques données sur internet.
+</p>
+<p>J'ai toujours voulu la faire et je me suis lancé, je n'ai que les routes du 1er/2ème siècle et du 8ème (en plus de celle de Marco Polo) mais c'est déjà un beau bordel.</p>
+<p>J'ai retracé à la main tous les trajets sur les routes et j'ai placé aussi toutes les villes. J'ai cherché pour avoir les délimitations des territoires de l'époque mais malheureusement je n'ai rien trouvé d'exploitable.</p>
+<p>Le plus complexe a été d'ajouter les noms des pays sur leur longueurs, avec une taille différentes et orientés vers le nord. Il y a quelques déformation en Afrique et en Asie du Sud-Est mais cela rend bien et j'en suis content.</p>
+<p>Pour ce faire j'ai du tracer une ligne en générateur de géométrie qui est segmenté pour s'orienter : </p>
+<code style="font-size: 0.9em">
+make_line(<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry), y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.1, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.2, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.3, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.4, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.5, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.6, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.7, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.8, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_min($geometry) + (x_max($geometry) - x_min($geometry)) * 0.9, y(centroid($geometry))),<br>
+  <span style="margin-left:35px;"></span>make_point(x_max($geometry), y(centroid($geometry)))<br>
+)
+</code>
+<p>J'ai ensuite tracé des points sur la géométrie en laissant de la place avant et après. Sur cette couche de points j'ai ajouté un champ avec les lettres pour les afficher en symbole et non en étiquette car il fallait que les noms des pays restent sous la thématique de la carte comme un fond de carte : substr("name", @row_number, 1)</p>
+<p>Ensuite pour l'inclinaison de ceux-ci j'ai mis ce code ci : - (x(transform($geometry, layer_property(@layer, 'crs'), 'EPSG:4326')) - 76)</p>
+<p>Puis vient le code pour la taille des caractères où j'ai récupéré la longueur de la ligne faite avec le générateur de géométrie tracé avant (le résultat est en mètres à l'échelle) :</p> <code style="font-size: 0.9em">clamp(50000,"longueur" * 33, 90000)</code>
+<p>J'ai eu du mal pour le choix des couleurs (que je n'apprécie toujours pas trop) mais voici le résultat final avec un planisphère et deux cartes en globe.</p>
+<div class="version">Version 1</div>
+<div class="gallery">
+<img src="maps/QGIS/MONDE_route_soie_V1.jpeg" alt="La route de la soie V1">
+</div>
+
+<div class="version">Version 2</div>
+<div class="gallery">
+<img src="maps/QGIS/MONDE_route_soie_V2.jpeg" alt="La route de la soie V2">
+</div>
+
+<div class="version">Version 3</div>
+<div class="gallery">
+<img src="maps/QGIS/MONDE_route_soie_V3.jpeg" alt="La route de la soie V3">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">CARTE DE BORDEAUX</a></h2>
+<p>Cette carte ont été produite via les données de la BDTOPO de l'IGN.</p>
+<p>J'ai voulu faire un rendu plutôt joli en cercle avec un code qui n'affichait que les données de chaque couche à X mètres de distance au lieu de faire un vulgaire masque blanc..... Je trouve quand même le rendu très joli avec ces chemin de fer/tram en orange et les routes principales en bleu.</p>
+<div class="gallery">
+<img src="maps/QGIS/BORDEAUX.jpg" alt="Bordeaux">
+</div>
+</section>
+
+
+<section>
+<h2><a href="#">CARTES DE L'AUSTRALIE</a></h2>
+<p>Ces cartes ont été produite via les données de l'opendata de l'Australie.</p>
+<p>J'ai voulu voir comment été produite les données, comment été divisé le pays (départements, villes etc) (et j'étais perdu au début ahah...) et j'ai voulu découvrir le pays via ses données.</p>
+<p>Voici donc plusieurs cartes faites à la va vite :</p>
+<div class="version">Sur l'élévation du pays (bien délimité et non flou)</div>
+<div class="gallery">
+<img src="img/bancs_v2.jpg" alt="Elevation de l'Australie">
+</div>
+
+<div class="version">Sur les routes principales</div>
+<div class="gallery">
+<img src="img/bancs_v2.jpg" alt="Les routes principales de l'Australie">
+</div>
+
+<div class="version">Sur les chemins de fer</div>
+<div class="gallery">
+<img src="img/bancs_v2.jpg" alt="Les chemins de fer de l'Australie">
+</div>
+
+<div class="version">Sur la densité de population</div>
+<div class="gallery">
+<img src="img/bancs_v2.jpg" alt="La densité de population de l'Australie">
+</div>
+</section>
+
+
+
+
+
+
+<section>
+<h2><a href="#">LA ZONE DE VISIBILITÉ DU MONT-BLANC À 300KM</a></h2>
+<p>Cette carte a été produite avec la BDATLI de l'IGN et le plugin Visibility Analysis.</p>
+<p>Le plus long a été d'insérer les vingtaines de fichiers par département. Ensuite je les ai fusionné puis j'ai lancé le plugin Visibility Analysis sur un rayon de 300km. J'avais la flemme de faire plus, on verra peut-être plus tard.</p>
+<div class="gallery">
+<img src="maps/FRANCE_origami.png" alt="La visibilité du Mont-Blanc sur 300km">
+</div>
+</section>
+
+
+
+
+
+
+
+<section>
+<h2><a href="#">LES VIGNOBLES AOP DE FRANCE</a></h2>
+<p>Cette carte a été produite via les données de l'INAO, de Wikipédia et de la BDTOPO de l'IGN.</p>
+<p>Je suis passé par énormément de styles et de couleurs différentes (formes simplifiées, couleurs "liège" etc) mais j'ai retenu celle-ci car je ne souhaitais plus me casser la tête sur le sujet et que je la trouve plutôt correct. Le plus contraignant de cette carte était le filtrage manuel du fichier CSV de l'INAO avec ses 1,2 millions de lignes. Ce qui veut dire que je n'ai en surface QUE les données AOP et non les IGP (ce qui augmenterait par exemple la surface de la Lorraine) par pure flemme. J'avais des idées de décoration de la carte mais j'ai abandonné par manque de temps car je devais l'imprimer avant mon départ en Australie.</p>
+<div class="gallery">
+<img src="maps/FRANCE_origami.png" alt="Les vignobles AOP de France">
 </div>
 </section>
 
