--- a/qgismaps.html
+++ b/qgismaps.html
@@ -426,28 +426,24 @@ make_line(<br>
 <p>Voici donc plusieurs cartes faites à la va vite :</p>
 <div class="version">Sur l'élévation du pays (bien délimité et non flou)</div>
 <div class="gallery">
-<img src="img/bancs_v2.jpg" alt="Elevation de l'Australie">
+<img src="maps/QGIS/AUSTRALIE_elevation.jpeg" alt="Elevation de l'Australie">
 </div>
 
 <div class="version">Sur les routes principales</div>
 <div class="gallery">
-<img src="img/bancs_v2.jpg" alt="Les routes principales de l'Australie">
+<img src="maps/QGIS/AUSTRALIE_major_roads.jpeg" alt="Les routes principales de l'Australie">
 </div>
 
 <div class="version">Sur les chemins de fer</div>
 <div class="gallery">
-<img src="img/bancs_v2.jpg" alt="Les chemins de fer de l'Australie">
+<img src="maps/QGIS/AUSTRALIE_train.jpeg" alt="Les chemins de fer de l'Australie">
 </div>
 
 <div class="version">Sur la densité de population</div>
 <div class="gallery">
-<img src="img/bancs_v2.jpg" alt="La densité de population de l'Australie">
+<img src="maps/QGIS/AUSTRALIE_population_surface.jpeg" alt="La densité de population de l'Australie">
 </div>
 </section>
-
-
-
-
 
 
 <section>
@@ -455,14 +451,9 @@ make_line(<br>
 <p>Cette carte a été produite avec la BDATLI de l'IGN et le plugin Visibility Analysis.</p>
 <p>Le plus long a été d'insérer les vingtaines de fichiers par département. Ensuite je les ai fusionné puis j'ai lancé le plugin Visibility Analysis sur un rayon de 300km. J'avais la flemme de faire plus, on verra peut-être plus tard.</p>
 <div class="gallery">
-<img src="maps/FRANCE_origami.png" alt="La visibilité du Mont-Blanc sur 300km">
+<img src="maps/QGIS/FRANCE_Mont_Blanc_300km.png" alt="La visibilité du Mont-Blanc sur 300km">
 </div>
 </section>
-
-
-
-
-
 
 
 <section>
@@ -470,7 +461,7 @@ make_line(<br>
 <p>Cette carte a été produite via les données de l'INAO, de Wikipédia et de la BDTOPO de l'IGN.</p>
 <p>Je suis passé par énormément de styles et de couleurs différentes (formes simplifiées, couleurs "liège" etc) mais j'ai retenu celle-ci car je ne souhaitais plus me casser la tête sur le sujet et que je la trouve plutôt correct. Le plus contraignant de cette carte était le filtrage manuel du fichier CSV de l'INAO avec ses 1,2 millions de lignes. Ce qui veut dire que je n'ai en surface QUE les données AOP et non les IGP (ce qui augmenterait par exemple la surface de la Lorraine) par pure flemme. J'avais des idées de décoration de la carte mais j'ai abandonné par manque de temps car je devais l'imprimer avant mon départ en Australie.</p>
 <div class="gallery">
-<img src="maps/FRANCE_origami.png" alt="Les vignobles AOP de France">
+<img src="maps/QGIS/FRANCE_vignobles_AOP.jpeg" alt="Les vignobles AOP de France">
 </div>
 </section>
 
