--- a/qgismaps.html
+++ b/qgismaps.html
@@ -359,8 +359,17 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 <p>J'ai par la suite fait un atlas pour imprimer chaque image que j'ai fusionné pour faire ce fichier mp4 avec Shutter encoder.</p>
 <p>Voici une vidéo test à refaire car pas mal de problème d'images dans la vidéo au mauvais endroit.</p>
 <div class="gallery">
-<img src="maps/FRANCE_origami.png" alt="Vidéo test de mes transports en été 2025 YOUTUBE">
-</div>
+<div class="gallery">
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/M7x3jNXXkRw"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen>
+</iframe>
+</div></div>
 </section>
 
 
