--- a/qgismaps.html
+++ b/qgismaps.html
@@ -326,11 +326,11 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">MON TRAJET POUR MON VOYAGE EN CHINE</a></h2>
+<h2><a href="#">MON VOYAGE EN CHINE</a></h2>
 <p>Cette carte a été produite avec les outils de base de QGIS.</p>
 <p>Rien de plus facile, j'ai du chercher le fond de carte adapté et j'ai placé à la main les points et lignes. Plus qu'à faire l'habillage de la carte.</p>
 <div class="gallery">
-<img src="maps/QGIS/FRANCE_origami.png" alt="Mon voyage en Chine">
+<img src="maps/QGIS/CHINE_mon_voyage_2025" alt="Mon voyage en Chine">
 </div>
 </section>
 
